--- a/gb/21/11/25/n13397949.md
+++ b/gb/21/11/25/n13397949.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/wbrvbw3786/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wbrvbw3786/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wbrvbw3786/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wbrvbw3786/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wbrvbw3786/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wbrvbw3786/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wbrvbw3786/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wbrvbw3786/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wbrvbw3786/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wbrvbw3786/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wbrvbw3786/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wbrvbw3786/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wbrvbw3786/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wbrvbw3786/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【拍案惊奇】张高丽带头反习 历史决议改547处</h2>
-<a href="https://db1uzmukbk5lb.cloudfront.net/R4i2jKSmx"><img width="600" src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wbrvbw3786/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d1b0mjr6ppvor4.cloudfront.net/Y2g2jKSml"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>张高丽带头反习！为护江泽民爆争论。（《新闻拍案惊奇》提供）
 </h6>
 <hr>
-	<p>【大纪元2021年11月25日讯】大家好，欢迎收看《<ahref=""></a><a href="https://db1uzmukbk5lb.cloudfront.net/R4i2jKSmx"><img width="600" src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wbrvbw3786/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/%E5%A4%A7%E5%AE%87%E6%8B%8D%E6%A1%88%E9%A9%9A%E5%A5%87DayuShow">新闻拍案惊奇</a>》，我是大宇。</p>
-<p><strong>今日焦点：</strong>中共罚“远东”三目的，打台独只其一；北大成<ahref="https://github.com/wbrvbw3786/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>大学？<ahref="https://github.com/wbrvbw3786/djy/blob/master/gb/tag/%E5%8E%86%E5%8F%B2%E5%86%B3%E8%AE%AE.md#1">历史决议</a>修改547处！六中全会激烈争论曝光；习要军队聚焦打仗，花莲外海模拟登陆；驻台美军翻番；谭咏麟也丑闻了。</p>
-<p style="text-align: center;"><a title="YouTube video player" src=""></a><a href="https://db1uzmukbk5lb.cloudfront.net/R4i2jKSmx"><img width="600" src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wbrvbw3786/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/a7SuA5BhyHY" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
+	<p>【大纪元2021年11月25日讯】大家好，欢迎收看《<ahref=""></a><a href="https://d1b0mjr6ppvor4.cloudfront.net/Y2g2jKSml"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/%E5%A4%A7%E5%AE%87%E6%8B%8D%E6%A1%88%E9%A9%9A%E5%A5%87DayuShow">新闻拍案惊奇</a>》，我是大宇。</p>
+<p><strong>今日焦点：</strong>中共罚“远东”三目的，打台独只其一；北大成<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>大学？<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8E%86%E5%8F%B2%E5%86%B3%E8%AE%AE.md#1">历史决议</a>修改547处！六中全会激烈争论曝光；习要军队聚焦打仗，花莲外海模拟登陆；驻台美军翻番；谭咏麟也丑闻了。</p>
+<p style="text-align: center;"><a title="YouTube video player" src=""></a><a href="https://d1b0mjr6ppvor4.cloudfront.net/Y2g2jKSml"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/a7SuA5BhyHY" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
 <h2>【感恩节到来 祝大家节日快乐 今年“黑五”预计火爆】</h2>
 <p>我们本期节目播出的时候，应该差不多就是感恩节了，在这里，我想祝福所有的观众朋友，感恩节快乐！感恩一路有各位的陪伴，也感谢大家一直给予我和这个节目鼓励，让我能一直坚持下来。两年多以来，虽然我们不在一处，但是有的观众，咱们的接触频次，比跟身边的亲朋好友可能都多？就比如那些每次节目首播都来看的观众，咱们是天天见面啊，都已经成老熟人了。所以感恩各位，让我一路走来不孤单，也结识了全天下这么多好朋友。也感谢上天的安排，让我做了这档节目，能够跟大家相识，能够跟各位一起见证时代，见证历史的转折！</p>
 <p>我们美东时间11月25日周四晚上没有节目，但是会给大家放个电影，感恩节嘛。预计是晚上11:30开始播放，是有我参演、客串的一部影片，大家感兴趣的，到时候可以来看。</p>
 <p>感恩节，在美国可是大节，更像华人的农历新年，阖家团圆、一起吃晚餐，外地上班的人都要回家乡，跟家人一起过节。纽约市就有不少人提前开车回到各个家乡所在的州，度感恩节长假。那么圣诞节呢，往往跟新年连到一起放假，更重要的意义是西方宗教上的意义，还有就是冬季旅行，圣诞节和新年假期是外出旅行比较火爆的时候。</p>
 <p>而感恩节，还有一个事情让人们很兴奋，就是随之而来的“黑色星期五”，网络商家近年来还炒热了一个“网购星期一”。我自己就有想买的东西，之前不买，就等着这个时候打出比较大的折扣，再买。我想这股“黑色星期五”潮流应该在亚洲也有影响吧，大家去网上查询，或者去找商家的宣传册，都会找到很多打折的物品。特别是自从瘟疫爆发以来，很多东西涨价，我想这反而会催生“黑色星期五”的购物热情，它有折扣嘛。</p>
-<h2>【“中国感恩节”会是啥样？北大一口气四个<ahref="https://github.com/wbrvbw3786/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>研究所】</h2>
+<h2>【“中国感恩节”会是啥样？北大一口气四个<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>研究所】</h2>
 <p>这是美国感恩节的一个情况。中国差点也出个“感恩节”，但是感恩的对象，好像不太对头。话说2020年3月的一个晚上，习近平习家军的成员，刚去武汉上任的王忠林，是新官上任三把火，这第一把火的关键词，就是“感恩”。在疫情那么严重的情况下，他在武汉大谈“感恩教育”，第一个，要感恩总书记习近平；第二个，要感恩共产邪党；然后又说了一堆发自“肠胃”的话，结果就在大陆，都招致网民一片酸讽。那天是3月7日，所以有中国网友提议，干脆，这一天定为“中国感恩节”，每年都这一天，大家早上都顶礼膜拜习近平照片，然后一起坐下，晚饭围坐起来，吃热干面、小笼包，再集体阅读习思想，上App答题得分，做一个“克服陋刃”的好公民，最后，睡觉。你看，这节日仪式都想好了。</p>
 <p>我这说都是玩笑，但也不是玩笑，因为现在这股个人崇拜风，在中国吹得还挺紧。</p>
 <p>11月22日，北京大学“一声炮响”，送来了“四个”习近平研究所，真的是四个！一个是“北大习近平新时代习近平经济思想研究中心”，一个是“习近平外交思想研究中心”，还有“习近平法治思想研究中心”，以及“习近平生态文明思想研究中心”，简直是捅了习近平的窝。北大校方郑重宣布，这是要进一步贯彻习总书记思想的重要举措，学校党委书记“邱水平”，自己担任习近平法治思想的学院院长，说这是北大时代重任。俨然一个毛泽东时代的回光返照。也怪不得，这党委书记的名字，就是“就这水平”念快，念快了就是“邱水平”，就这水平。</p>
@@ -35,12 +35,12 @@
 <h2>【中共处罚“远东”三重目的 对台攻掠已开始】</h2>
 <p>因此，中共对“远东集团”的处罚，应该不只是因为它给民进党捐款，更重要的是，它是台湾政治资助活动非常活跃的企业，2020年的台湾立委选举，“远东集团”的政治捐助，在台湾企业中名列第一，达到5800万，比第二名多出4000多万元。我想这才是“远东集团”被中共瞄准的最主要原因。而中共的目的，一方面是威胁在大陆做生意的台湾企业，不要在台湾的选举中捐助任何一方，因为现代的民主选举，这个资金是很重要的，参选人要宣传自己，那切断了这个资金来源，实际上是直接想给台湾的民主运作制造麻烦和阻力；另一方面，这也是中共“逼统”的一个环节，也许他们所做的恰如普京所言，不一定是靠“武力”武统，而是用经济压迫等方式谋台，达到“逼统”的效果。</p>
 <p>还有第三个方面，“远东集团”捐助过的苏贞昌，最近被中共列为“台独顽固分子”，另外两人是游锡堃和吴钊燮，而且11月24日，中共还扬言，说台独顽固分子清单上绝不止这3人，威胁说“有他们真正遗憾的时候”。所以，这此对“远东集团”的制裁，也是变相在对所谓“台独顽固分子”进行长臂打压。可以说，这一刻的“远东集团”案非常重要，从中共的组合拳来看，对台湾的攻掠，正在进行之中。对此，台湾社会必须非常团结才行。</p>
-<h2>【<ahref="https://github.com/wbrvbw3786/djy/blob/master/gb/tag/%E6%91%A9%E6%A0%B9%E5%A4%A7%E9%80%9A.md#1">摩根大通</a>调侃中共 彭帅举报<ahref="https://github.com/wbrvbw3786/djy/blob/master/gb/tag/%E5%BC%A0%E9%AB%98%E4%B8%BD.md#1">张高丽</a>原因揭晓】</h2>
-<p>而反观中共，对台湾文攻武吓的同时，它自己的内斗，是更加凶险。他们进攻台湾的时间，和自己挺不下去的时刻，到底哪一个先来到，还未必。就连一直被认为是“熊猫派”的美国金融巨头<ahref="https://github.com/wbrvbw3786/djy/blob/master/gb/tag/%E6%91%A9%E6%A0%B9%E5%A4%A7%E9%80%9A.md#1">摩根大通</a>，其CEO杰米·戴蒙（Jamie Dimon）在11月23日还开了中共的玩笑。摩根大通是1921年在中国建立分行，中共也是1921年成立，戴蒙说，中共前段时间庆祝100年，而摩根大通也是100年，但随即他说了一句：我敢打赌，我们活得更长。而且他也说，这些话他不能在中国说，因为共产党会听到。就连摩根大通的精英主管，都能说出这样的言论，可见对中共的负面认知，各界都已经多少有掌握，只不过，这位摩根大通的CEO也说，自己不会因为不同意北京的某一项政策，就跟中国切断业务往来。</p>
-<p>最近，彭帅的事件，更在国际上掀起波澜，让北京当局又掉了一波粉丝。在澳洲的知名学者袁红冰，透露了一个党内消息人士的爆料，说原本习近平要在第三份<ahref="https://github.com/wbrvbw3786/djy/blob/master/gb/tag/%E5%8E%86%E5%8F%B2%E5%86%B3%E8%AE%AE.md#1">历史决议</a>上，公开批评江泽民，要他为中共的腐败负责，在六中全会之前，中共高层就做了讨论，但是这一点，却被<ahref="https://github.com/wbrvbw3786/djy/blob/master/gb/tag/%E5%BC%A0%E9%AB%98%E4%B8%BD.md#1">张高丽</a>等人“带头反对”。众所周知，张高丽是已经退休的前江派常委。相关事件党报也有含蓄提到过，但只说的是第三份历史决议向“党内部分老同志”征求了意见，最后修改了547处！然后中共政治局又开了两次会议进行审议，才最终通过。党媒新华社和《人民日报》都指出，这份决议，在六中全会上经过了激烈讨论，说经常是一个人话没讲完，另一个人就举手。党媒能公开这么报导，是很罕见的。</p>
+<h2>【<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%91%A9%E6%A0%B9%E5%A4%A7%E9%80%9A.md#1">摩根大通</a>调侃中共 彭帅举报<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BC%A0%E9%AB%98%E4%B8%BD.md#1">张高丽</a>原因揭晓】</h2>
+<p>而反观中共，对台湾文攻武吓的同时，它自己的内斗，是更加凶险。他们进攻台湾的时间，和自己挺不下去的时刻，到底哪一个先来到，还未必。就连一直被认为是“熊猫派”的美国金融巨头<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%91%A9%E6%A0%B9%E5%A4%A7%E9%80%9A.md#1">摩根大通</a>，其CEO杰米·戴蒙（Jamie Dimon）在11月23日还开了中共的玩笑。摩根大通是1921年在中国建立分行，中共也是1921年成立，戴蒙说，中共前段时间庆祝100年，而摩根大通也是100年，但随即他说了一句：我敢打赌，我们活得更长。而且他也说，这些话他不能在中国说，因为共产党会听到。就连摩根大通的精英主管，都能说出这样的言论，可见对中共的负面认知，各界都已经多少有掌握，只不过，这位摩根大通的CEO也说，自己不会因为不同意北京的某一项政策，就跟中国切断业务往来。</p>
+<p>最近，彭帅的事件，更在国际上掀起波澜，让北京当局又掉了一波粉丝。在澳洲的知名学者袁红冰，透露了一个党内消息人士的爆料，说原本习近平要在第三份<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8E%86%E5%8F%B2%E5%86%B3%E8%AE%AE.md#1">历史决议</a>上，公开批评江泽民，要他为中共的腐败负责，在六中全会之前，中共高层就做了讨论，但是这一点，却被<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BC%A0%E9%AB%98%E4%B8%BD.md#1">张高丽</a>等人“带头反对”。众所周知，张高丽是已经退休的前江派常委。相关事件党报也有含蓄提到过，但只说的是第三份历史决议向“党内部分老同志”征求了意见，最后修改了547处！然后中共政治局又开了两次会议进行审议，才最终通过。党媒新华社和《人民日报》都指出，这份决议，在六中全会上经过了激烈讨论，说经常是一个人话没讲完，另一个人就举手。党媒能公开这么报导，是很罕见的。</p>
 <p>从最终的决议草案来看，习近平方面是做出了很多让步，可见党内不同意见之多，内斗之激烈。而刚刚我们提到的袁红冰给出的消息，最关键的是，对于江泽民为中共腐败负责，是张高丽带头激烈反对的，习对此相当不爽。而彭帅的事情，是在六中全会前就爆出，如果按照袁红冰所说，刚好可以给彭帅在那样一个时刻爆料张高丽，给出一个注解。目前当局对彭帅的处理方式，一方面是习近平跟张高丽方面已经妥协，另一方面，就是双方的拉锯战还没有结束，目前对彭帅的这种党媒“报平安”的处置，只是个权宜之计，也是中共高层对外维护集体颜面、维护政治安全的一种手段。</p>
 <h2>【谭咏麟被大陆男举报跟女友上床 又给中共“递了枪”】</h2>
-<p>同时，恰如我们所说，中共这边一出什么事，必有名人出事！这不，今年已经71岁的香港亲共艺人谭咏麟，被大陆一名男子在网上爆料，说他跟一个23岁的女粉丝上床，对谭咏麟进行声讨，因为那女粉丝正是爆料男子的女朋友！爆料人还曝光了指称是谭咏麟在旅馆房间的一张背影照片。此事逐渐在网上炒热，很多人都在追事件细节。而这件事，是刚好又被中共捡到枪，想以此冲淡墙外对张高丽事件的关注。《<ahref=""></a><a href="https://db1uzmukbk5lb.cloudfront.net/R4i2jKSmx"><img width="600" src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wbrvbw3786/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/%E5%A4%A7%E5%AE%87%E6%8B%8D%E6%A1%88%E9%A9%9A%E5%A5%87DayuShow">新闻拍案惊奇</a>》</p>
+<p>同时，恰如我们所说，中共这边一出什么事，必有名人出事！这不，今年已经71岁的香港亲共艺人谭咏麟，被大陆一名男子在网上爆料，说他跟一个23岁的女粉丝上床，对谭咏麟进行声讨，因为那女粉丝正是爆料男子的女朋友！爆料人还曝光了指称是谭咏麟在旅馆房间的一张背影照片。此事逐渐在网上炒热，很多人都在追事件细节。而这件事，是刚好又被中共捡到枪，想以此冲淡墙外对张高丽事件的关注。《<ahref=""></a><a href="https://d1b0mjr6ppvor4.cloudfront.net/Y2g2jKSml"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/%E5%A4%A7%E5%AE%87%E6%8B%8D%E6%A1%88%E9%A9%9A%E5%A5%87DayuShow">新闻拍案惊奇</a>》</p>
 <h3>～～～新拍互动～～～</h3>
 <p>现在是“新拍互动”。</p>
 <p>上一期节目，我在介绍中共统计局的一组数据时，提到说2013年中国有1346.93万对登记结婚，到2020年，已经跌到了814.33万对，我在节目中说：这统计学有意思，那个“0.93”是哪一对我很好奇。这句“不走心”的话立即被一些观众指出，口诛笔伐。</p>
@@ -69,48 +69,48 @@
 大宇会员网站：<ahref="http://dayuus.com">dayuus.com</a><br />
 支持大宇：<ahref="https://donorbox.org/dayutime">https://donorbox.org/dayutime</a><br />
 欢迎订阅+打开小铃铛：<ahref="http://bit.ly/PAJQsub">http://bit.ly/PAJQsub</a></p>
-<p>新唐人《<ahref=""></a><a href="https://db1uzmukbk5lb.cloudfront.net/R4i2jKSmx"><img width="600" src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wbrvbw3786/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/%E5%A4%A7%E5%AE%87%E6%8B%8D%E6%A1%88%E9%A9%9A%E5%A5%87DayuShow">新闻拍案惊奇</a>》制作组</p>
+<p>新唐人《<ahref=""></a><a href="https://d1b0mjr6ppvor4.cloudfront.net/Y2g2jKSml"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/%E5%A4%A7%E5%AE%87%E6%8B%8D%E6%A1%88%E9%A9%9A%E5%A5%87DayuShow">新闻拍案惊奇</a>》制作组</p>
 <p>责任编辑：高静#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/9/n13364872.md#1">【拍案惊奇】六中会场地 解密“京西宾馆”</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/11/n13369997.md#1">【拍案惊奇】大外宣放风 习只能连任三届？</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/12/n13372037.md#1">【拍案惊奇】“双11”电商促销 赵薇复出？</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/16/n13379699.md#1">【拍案惊奇】谁在传“王健林病逝”？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/11/9/n13364872.md#1">【拍案惊奇】六中会场地 解密“京西宾馆”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/11/11/n13369997.md#1">【拍案惊奇】大外宣放风 习只能连任三届？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/11/12/n13372037.md#1">【拍案惊奇】“双11”电商促销 赵薇复出？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/11/16/n13379699.md#1">【拍案惊奇】谁在传“王健林病逝”？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/29/n10939788.md#1" target="_blank">共产暴政录：湖南道县大屠杀</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/10/n11929991.md#1" target="_blank">斯洛伐克各界人士谴责中共迫害法轮功</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/28/n11616929.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/14/n11587779.md#1" target="_blank">台北修炼心得交流会 法轮功学员谈身心改变</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/16/n13379941.md#1">【百年真相】张高丽和江派官员淫乱秘闻</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/19/n13386805.md#1">【未解之谜】外星人访谈录（3）监狱地球</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/19/n13386938.md#1">【百年真相】80岁被逼扫街 梁启超夫人文革受辱</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/20/n13388351.md#1">【舞蹈三剑客】神韵演员如何保持良好体态</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/15/n13376505.md#1">【人生之钥】死前五天他翻转人生 官至一品寿高八十</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/24/n13396565.md#1">【远见快评】台湾出席民主峰会 中共抗议降温</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/25/n13396703.md#1">【古韵流芳】大脚皇后背夫逃难 朱元璋赞贤妻犹良相</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/24/n13396382.md#1">【探索时分】歼10击落F22？盘点四大军事假新闻</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/22/n13391647.md#1">维生素E不只抗老 有4大功效 2招正确补充</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/23/n13392281.md#1">新研究：巧合般完美 宇宙是经过精心设计的</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/23/n13392519.md#1">加州80蒙面劫匪快闪洗劫商场 分25辆车逃逸</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/23/n13394282.md#1">刘嘉玲晒与家人合照 梁朝伟被指撞脸齐秦</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/22/n13391890.md#1">艺人大S与汪小菲宣布离婚 大陆网民反应两极</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/23/n13392248.md#1">港片《时代革命》金马影展首映 观众泣不成声</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/22/n13391774.md#1">落实复出新戏？范冰冰晒与导演李玉合照</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/23/n13394062.md#1">昆凌惊爆头部撞伤 紧急取消隔日行程</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/22/n13391647.md#1">维生素E不只抗老 有4大功效 2招正确补充</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/23/n13392522.md#1">为救失去意识女车主 荷兰男子开车去给她撞</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/22/n13391667.md#1">睡不着、睡不好？害你失眠的7种坏习惯</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/24/n13395285.md#1">美国离奇车祸 SUV把SUV撞飞到SUV上</a></li>
-<li><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/23/n13392810.md#1">纽西兰女子报警：我被负鼠“软禁”在家！</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wbrvbw3786/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wbrvbw3786/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/25/n13397949.htm">【拍案惊奇】张高丽带头反习 历史决议改547处</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/25/n13397949.htm">【拍案惊奇】张高丽带头反习 历史决议改547处</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wbrvbw3786/djy/blob/master/gb/21/11/25/n13397949.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wbrvbw3786/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wbrvbw3786/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wbrvbw3786/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wbrvbw3786/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/11/25/n13397949.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
